--- a/docker/backcfg/.env
+++ b/docker/backcfg/.env
@@ -42,3 +42,7 @@ MAILER_URL=smtp://127.0.0.1:1025
 MAILER_SENDER=no-reply@pialab.io
 MAILER_SENDER_NAME='PiaLab Account Manager'
 ###< symfony/swiftmailer-bundle ###
+
+SNCF_CONNECT_URL=
+SNCF_CONNECT_ID=
+SNCF_CONNECT_SECRET=
