--- a/docker/frontcfg/pialab-front.conf
+++ b/docker/frontcfg/pialab-front.conf
@@ -10,4 +10,11 @@ Listen 4200
 <Directory /var/www/pialab-front/dist/>
   AllowOverride None
   DirectoryIndex index.html
+
+  RewriteEngine On
+  RewriteBase /
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteRule ^(.*)$ /index.html [L,QSA]
+
 </Directory>
