--- a/docker/backcfg/.env
+++ b/docker/backcfg/.env
@@ -39,8 +39,8 @@ CORS_ALLOW_ORIGIN_DEV=^https?://localhost:?[0-9]*$
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=smtp://127.0.0.1:1025
-MAILER_SENDER=no-reply@pialab.io
-MAILER_SENDER_NAME='PiaLab Account Manager'
+MAILER_SENDER=no-reply@3035.app
+MAILER_SENDER_NAME='30|35 Account Manager'
 ###< symfony/swiftmailer-bundle ###
 
 SNCF_CONNECT_URL=
